# solar-flare-prediction

./: .gitignore  LICENSE  Makefile  NOTES.md  PROCEDURE.md  README.md  devfile.yaml  pod-storage-redis.yaml  pyproject.toml  requirements.txt  setup.sh
.ipynb_checkpoints/: NOTES-checkpoint.md  README-checkpoint.md
notebooks/: .env  01_data_fetch.ipynb  02_data_explore.ipynb  cleanup.sh  exploration.ipynb  setup.sh
notebooks/.ipynb_checkpoints/: 01_data_fetch-checkpoint.ipynb  02_data_explore-checkpoint.ipynb
references/: DATA.md  NOTES.md  PROCEDURE.md
solar_flare_demo/: __init__.py  dataset.py  features.py  fetch_data.py  plots.py
solar_flare_demo/modeling/: predict.py  train.py
