[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "solar_flare_demo"
version = "0.0.1"
description = "Intent for this repo is to configure and demonstrate a cloud-native environment purpose built for data scientists to tackle the Machine Learning Development Lifecycle (MLDMC) simulating detection and prediction of solar flares."
authors = [
  { name = "dmarcus@redhat.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.9"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["solar_flare_demo"]
force_sort_within_sections = true
